added social links:

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         </div>
         <p class="lead mb-5">I am a motivated student who is passionate about learning new skills and technologies in order to leverage the knowledge gained to build robust systems and functional components for various organizations/individuals. I have good communication skills which enable me to effectively engage with a wide variety of people.</p>
         <div class="social-icons">
-          <a href="https://linkedin.com/">
+          <a href="https://www.linkedin.com/in/ashley-t-shumba-89313314b/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/shumbaashley">
+          <a href="https://www.github.com/shumbaashley">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/shumba_ashley">
+          <a href="https://www.twitter.com/shumba_ashley">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://facebook.com/shumbaashleyt">
+          <a href="https://www.facebook.com/ashleyt.shumba/">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://instagram.com/">
+          <a href="https://www.instagram.com/shumbaashley/">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
@@ -168,16 +168,16 @@
           <div class="resume-content media-body mr-3">
             <h3 class="mb-0">The Reader's Guide</h3>
             <div class="subheading mb-3"></div>
-            <p>The Reader's Guide is more than just a book review website because it is aimed at providing the readers with reliable unbiased opinions on various books. The Reader's Guide also recommends great reads which they have listed in thier all-time top 100 books to read. <span><a href="https://readit.pythonanywhere.com">Go see the project </a></span></p>
+            <p>The Reader's Guide is more than just a book review website; it is aimed at providing its readers with unbiased opinions on various books from different genres. The Reader's Guide also recommends great books to read which are listed in thier all-time top 100 books to read. <span><a href="https://readit.pythonanywhere.com">Go see the project </a></span></p>
           </div>
-            <img src="img/profile.jpg" class="img img-fluid rounded w-25 " alt="">
+            <img src="img/readit.png" class="img img-fluid rounded w-25 " alt="">
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 media">
-          <img src="img/profile.jpg" class="img img-fluid rounded w-25 " alt="">
+          <img src="img/lion.png" class="img img-fluid rounded w-25 " alt="">
           <div class="resume-content media-body ml-4 ">
             <h3 class="mb-0">Lion Airways</h3>
             <div class="subheading mb-3"></div>
-            <p>Looking to travel around the world? Lion Airways has got you covered! Use our website to book a flight to and from any of the major cities across the world and our airline will deliver your dream flight. Our mission is to deliver a rich first class air travel experience to every customer who flies using our airline. <span><a href="https://lionairways.pythonanywhere.com">Go see the project </a></span></div>
+            <p>Looking to travel around the world? Lion Airways has got you covered! Use our website to book a flight to and from any of the major cities across the world and our airline will deliver your dream flight. We provide rich first class air travel experience to all our customers. <span><a href="https://lionairways.pythonanywhere.com">Go see the project </a></span></div>
         </div>
       </div>
     </section>
@@ -237,7 +237,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time reading self help books and listening to interesting audio books or podtcasts. I enjoy walking, jogging, and occasionaly visiting the local gym.</p>
+        <p>Apart from being a web developer, I enjoy most of my time reading self help books and listening to interesting audio books or podcasts. I enjoy walking, jogging, and occasionaly visiting the local gym.</p>
         <p class="mb-0">I follow a number of epic and fantasy genre movies and television shows, I am an aspiring french speaker, and I spend a large amount of my free time exploring the latest technology advancements in the web development world.</p>
       </div>
     </section>
