--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Projects</a>
-        </li>
+        </li>     
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
@@ -86,7 +86,7 @@
           </a>
           <a href="https://www.instagram.com/shumbaashley/">
             <i class="fab fa-instagram"></i>
-          </a>
+          </a>  
         </div>
       </div>
     </section>
@@ -144,7 +144,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Freelance Web Developer</h3>
             <div class="subheading mb-3"></div>
-            <p>I have developed websites and other web applications for different clients and friends on a part time basis. I have also worked on a number of projects as part of my personal portfolio and a few of them are mentioned in the projects section of this resume.</p>
+            <p>I have developed websites and other web applications for different clients, colleagues and friends on a part time basis. I have also worked on a number of projects as part of my personal portfolio and a few of them are mentioned in the projects section of this resume.</p>
             <p>The projects I have managed to complete so far have helped me practice both front end and back end web development as well as test different tools and frameworks.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -172,7 +172,7 @@
           </div>
             <img src="img/readit.png" class="img img-fluid rounded w-25 " alt="">
         </div>
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 media">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between  mb-5 media">
           <img src="img/lion.png" class="img img-fluid rounded w-25 " alt="">
           <div class="resume-content media-body ml-4 ">
             <h3 class="mb-0">Lion Airways</h3>
@@ -238,7 +238,7 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy most of my time reading self help books and listening to interesting audio books or podcasts. I enjoy walking, jogging, and occasionaly visiting the local gym.</p>
-        <p class="mb-0">I follow a number of epic and fantasy genre movies and television shows, I am an aspiring french speaker, and I spend a large amount of my free time exploring the latest technology advancements in the web development world.</p>
+        <p class="mb-0">I follow a number of epic and fantasy genre movies and television shows, I am also interested learning the French language, and I spend a large amount of my free time exploring the latest technology advancements in the web development world.</p>
       </div>
     </section>
 
