--- a/index.html
+++ b/index.html
@@ -198,31 +198,35 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="Python" class="list-inline-item">
             <i class="fab fa-python"></i>
           </li>
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="JavaScript" class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="PHP" class="list-inline-item">
             <i class="fab fa-php"></i>
           </li>
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="React" class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li data-toggle="tool-tip" data-placement="bottom" title="Wordpress" class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
+          </li>
+          <li data-toggle="tool-tip" data-placement="bottom" title="NodeJS" class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+          <li data-toggle="tool-tip" data-placement="bottom" title="Linux" class="list-inline-item">
+            <i class="fab fa-linux"></i>
+          </li>
+
+          <li data-toggle="tool-tip" data-placement="bottom" title="HTML5" class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="CSS3" class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
           </li>
-          <li class="list-inline-item">
+          <li data-toggle="tool-tip" data-placement="bottom" title="Bootstrap" class="list-inline-item">
             <i class="fab fa-bootstrap"></i>
           </li>
         </ul>
