updated current position

--- a/index.html
+++ b/index.html
@@ -148,13 +148,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Freelance Web Developer</h3>
-            <div class="subheading mb-3"></div>
+            <h3 class="mb-0">DuriHub Private Ltd (Internship)</h3>
+            <div class="subheading mb-3">Frontend Mobile App Developer</div>
+            <p>Developed cross platform, performant and intuitive mobile applications that use VOIP to transmit data, voice and video between network subscribers at affordable rates. Involves designing rich and mobile responsive UIs for various device screens using Google's flutter framework and Dart.</p>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Freelance Web Development</h3>
+            <div class="subheading mb-3">Full Stack Web Developer</div>
             <p>I have developed websites and other web applications for different clients, colleagues and friends on a part time basis. I have also worked on a number of projects as part of my personal portfolio and a few of them are mentioned in the projects section of this resume.</p>
             <p>The projects I have managed to complete so far have helped me practice both front end and back end web development as well as test different tools and frameworks.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2019 - Present</span>
+            <span class="text-primary">January 2019 - November 2020</span>
           </div>
         </div>
       </div>
@@ -203,9 +215,6 @@
           </li>
           <li data-toggle="tool-tip" data-placement="bottom" title="JavaScript" class="list-inline-item">
             <i class="fab fa-js-square"></i>
-          </li>
-          <li data-toggle="tool-tip" data-placement="bottom" title="PHP" class="list-inline-item">
-            <i class="fab fa-php"></i>
           </li>
           <li data-toggle="tool-tip" data-placement="bottom" title="React" class="list-inline-item">
             <i class="fab fa-react"></i>
