--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="resume-content media-body mr-3 ">
             <h3 class="mb-0">Perfomace Reviews App</h3>
             <div class="subheading mb-3"></div>
-            <p>An HR System for managing personell, departments and weekly perfomance reviews. This system will allow supervisors to review and approve weekly perfomace reviews submitted by the employees<span><a href="https://city-council-app.herokuapp.com">Go see the project </a></span></p>
+            <p>An HR System for managing personell, departments and weekly perfomance reviews. This system will allow supervisors to review and approve weekly perfomace reviews submitted by the employees. <span><a href="https://city-council-app.herokuapp.com">Go see the project </a></span></p>
             </div>
             <img src="img/city-council.png" class="align-self-center img img-fluid rounded w-50 mb-3" alt="">
         </div>
