--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <h2 class="mb-5">Projects</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between p-3 mb-5 media">
           <div class="resume-content media-body mr-3 ">
-            <h3 class="mb-0">Perfomace Reviews App</h3>
+            <h3 class="mb-0">Performance Reviews App</h3>
             <div class="subheading mb-3"></div>
             <p>An HR System for managing personell, departments and weekly perfomance reviews. This system will allow supervisors to review and approve weekly perfomace reviews submitted by the employees. <span><a href="https://city-council-app.herokuapp.com">Go see the project </a></span></p>
             </div>
