--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="resume-content media-body mr-3">
             <h3 class="mb-0">The Reader's Guide</h3>
             <div class="subheading mb-3"></div>
-            <p>The Reader's Guide is more than just a book review website; it is aimed at providing its readers with unbiased opinions on various books from different genres. The Reader's Guide also recommends great books to read which are listed in thier all-time top 100 books to read. <span><a href="https://readit.pythonanywhere.com">Go see the project </a></span></p>
+            <p>The Reader's Guide is more than just a book review website; it is aimed at providing its readers with unbiased opinions on various books from different genres. The Reader's Guide also recommends great books to read which are listed in thier all-time top 100 books to read. <span><a href="https://readers-guide.herokuapp.com/">Go see the project </a></span></p>
           </div>
           <img src="img/readit.png" class="align-self-center img img-fluid rounded w-50  mb-3" alt="">
         </div>
