--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="resume-content media-body mr-3 ">
             <h3 class="mb-0">Lion Airways</h3>
             <div class="subheading mb-3"></div>
-            <p>Looking to travel around the world? Lion Airways has got you covered! Use our website to book a flight to and from any of the major cities across the world and our airline will deliver your dream flight. We provide rich first class air travel experience to all our customers. <span><a href="https://lionairways.pythonanywhere.com">Go see the project </a></span></p>
+            <p>Looking to travel around the world? Lion Airways has got you covered! Use our website to book a flight to and from any of the major cities across the world and our airline will deliver your dream flight. We provide rich first class air travel experience to all our customers. <span><a href="https://lionairways.herokuapp.com">Go see the project </a></span></p>
             </div>
             <img src="img/lion.png" class="align-self-center img img-fluid rounded w-50 mb-3" alt="">
         </div>
