--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Ashley T Shumba</title>
+  <title>Ashley T Shumba</title>
 
   <link rel="shortcut icon" href="img/cropped-cv-favicon.png" type="image/png" >
 
