--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1 class="mb-0">Ashley T
           <span class="text-primary">Shumba</span>
         </h1>
-        <div class="subheading mb-5">2952/13 Mbizo · Kwekwe · Zimbabwe · (+263) 787 382 522 ·
+        <div class="subheading mb-5">224 Willow Creek, Good Hope · Harare · Zimbabwe · (+263) 787 382 522 ·
           <a href="mailto:ashleytshumba@gmail.com">ashleytshumba@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a motivated student who is passionate about learning new skills and technologies in order to leverage the knowledge gained to build robust systems and functional components for various organizations/individuals. I have good communication skills which enable me to effectively engage with a wide variety of people.</p>
@@ -148,7 +148,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">DuriHub Private Ltd (Internship)</h3>
+            <h3 class="mb-0">AFRICOM Private Ltd (Internship)</h3>
             <div class="subheading mb-3">Frontend Mobile App Developer</div>
             <p>Developed cross platform, performant and intuitive mobile applications that use VOIP to transmit data, voice and video between network subscribers at affordable rates. Involves designing rich and mobile responsive UIs for various device screens using Google's flutter framework and Dart.</p>
             <p></p>
