campus deals app

--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@
         </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between p-3 mb-5 media">
           <div class="resume-content media-body mr-3">
+            <h3 class="mb-0">Campus Deals App</h3>
+            <div class="subheading mb-3"></div>
+            <p>Campus Deals App is an online shopping platform for buyers and sellers anywhere in Zimbabwe. It aims to provide convenience and  commerce to University Students from different campuses in and around Zimbabwe. <span><a href="https://campusdealsapp.herokuapp.com/">Go see the project </a></span></p>
+          </div>
+          <img src="img/campusdealsapp.png" class="align-self-center img img-fluid rounded w-50  mb-3" alt="">
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between p-3 mb-5 media">
+          <div class="resume-content media-body mr-3">
             <h3 class="mb-0">The Reader's Guide</h3>
             <div class="subheading mb-3"></div>
             <p>The Reader's Guide is more than just a book review website; it is aimed at providing its readers with unbiased opinions on various books from different genres. The Reader's Guide also recommends great books to read which are listed in thier all-time top 100 books to read. <span><a href="https://readers-guide.herokuapp.com/">Go see the project </a></span></p>
