--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="resume-content">
             <h3 class="mb-0">National University of Science &amp; Technology</h3>
             <div class="subheading mb-3"></div>
-            <div>I am an aspiring electronic engineer and currently I am in doing my third year of studies, pursuing a Bachelor of Engineering Honours in Electronic Engineering.</div>
+            <div>I am an aspiring electronic engineer and currently I am in doing my fourth year of studies, pursuing a Bachelor of Engineering Honours in Electronic Engineering.</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - Present</span>
