restaurant management app

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
             </div>
             <img src="img/lion.png" class="align-self-center img img-fluid rounded w-50 mb-3" alt="">
         </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between p-3 mb-5 media">
+          <div class="resume-content media-body mr-3 ">
+            <h3 class="mb-0">Restaurant Management</h3>
+            <div class="subheading mb-3"></div>
+            <p>Restaurant Management App is an restaurant administration system meant to help manage customer orders and track deliveries in real time. The restaurant owner can manage one restaurant at a time keeping track of meals and orders purchased<span><a href="https://restaurantmanagement-system.herokuapp.com/">Go see the project </a></span></p>
+            </div>
+            <img src="img/restaurantsystem.png" class="align-self-center img img-fluid rounded w-50 mb-3" alt="">
+        </div>
       </div>
     </section>
 
